Added script test

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:ridho9/gigih-git.git",
   "author": "Ridho Pratama <p.ridho@yahoo.co.id>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo test"
+  }
 }
